--- a/dockerfiles/jenkins/Dockerfile
+++ b/dockerfiles/jenkins/Dockerfile
@@ -4,18 +4,18 @@ MAINTAINER juergen.seliger@gmail.com
 # if we want to install via apt
 USER root
 
-ENV VERSION master
-
-WORKDIR /opt
-
-RUN cd /opt \
-	&& git clone -b ${VERSION} --single-branch git://git.openstack.org/openstack-infra/jenkins-job-builder \
-	&& cd /opt/jenkins-job-builder \
-	&& pip install -r requirements.txt \
-	&& python setup.py install \
-	&& rm -R /opt/jenkins-job-builder
-
-ENTRYPOINT ["/usr/local/bin/jenkins-jobs"]
+#ENV VERSION master
+#
+#WORKDIR /opt
+#
+#RUN cd /opt \
+#	&& git clone -b ${VERSION} --single-branch git://git.openstack.org/openstack-infra/jenkins-job-builder \
+#	&& cd /opt/jenkins-job-builder \
+#	&& pip install -r requirements.txt \
+#	&& python setup.py install \
+#	&& rm -R /opt/jenkins-job-builder
+#
+#ENTRYPOINT ["/usr/local/bin/jenkins-jobs"]
 
 
 RUN apt-get update && apt-get install -y ruby
