jenkins Dockerfile hinzu

--- a/dockerfiles/jenkins/Dockerfile
+++ b/dockerfiles/jenkins/Dockerfile
@@ -18,7 +18,7 @@ USER root
 #ENTRYPOINT ["/usr/local/bin/jenkins-jobs"]
 
 
-RUN apt-get update && apt-get install -y ruby
+#RUN apt-get update && apt-get install -y ruby
 ##make more-thing-here
 # drop back to the regular jenkins user - good practice
 
