--- a/dockerfiles/jenkins/Dockerfile
+++ b/dockerfiles/jenkins/Dockerfile
@@ -4,6 +4,12 @@ MAINTAINER juergen.seliger@gmail.com
 # if we want to install via apt
 USER root
 
+ENV VERSION 1.4.0
+
+RUN apk add --no-cache python
+RUN apk add --no-cache py-pip
+RUN pip install jenkins-job-builder==${VERSION}
+
 #ENV VERSION master
 #
 #WORKDIR /opt
