--- a/dockerfiles/jenkins/Dockerfile
+++ b/dockerfiles/jenkins/Dockerfile
@@ -4,24 +4,16 @@ MAINTAINER juergen.seliger@gmail.com
 # if we want to install via apt
 USER root
 
+## jenkins plugins
+RUN /usr/local/bin/install-plugins.sh docker-slaves github-branch-source:1.8
+
+
+## jenkins-job-builder
 ENV VERSION 2.0.0.0b2
 
 RUN apk add --no-cache python
 RUN apk add --no-cache py-pip
 RUN pip install jenkins-job-builder==${VERSION}
-
-#ENV VERSION master
-#
-#WORKDIR /opt
-#
-#RUN cd /opt \
-#	&& git clone -b ${VERSION} --single-branch git://git.openstack.org/openstack-infra/jenkins-job-builder \
-#	&& cd /opt/jenkins-job-builder \
-#	&& pip install -r requirements.txt \
-#	&& python setup.py install \
-#	&& rm -R /opt/jenkins-job-builder
-#
-#ENTRYPOINT ["/usr/local/bin/jenkins-jobs"]
 
 
 #RUN apt-get update && apt-get install -y ruby
