--- a/dockerfiles/wordpress/docker-compose.yml
+++ b/dockerfiles/wordpress/docker-compose.yml
@@ -1,12 +1,13 @@
-version: '3'
+version: '2.0'
 #
 # look at: https://docs.docker.com/compose/wordpress/
 #
 services:
    db:
+     container_name: wp-database-test
      image: mysql:5.7
      volumes:
-       - db_data:/var/lib/mysql
+       - wp-database:/var/lib/mysql
      restart: always
      environment:
        MYSQL_ROOT_PASSWORD: somewordpress
@@ -15,9 +16,12 @@ services:
        MYSQL_PASSWORD: wordpress
 
    wordpress:
+     container_name: wordpress-test
      depends_on:
        - db
-     image: wordpress:latest
+     image: wordpress:4.9.1-php7.0-apache
+     volumes:
+           - wp-files:/var/www/html
      ports:
        - "8000:80"
      restart: always
@@ -26,5 +30,6 @@ services:
        WORDPRESS_DB_USER: wordpress
        WORDPRESS_DB_PASSWORD: wordpress
 volumes:
-    db_data:
+    wp-database:
+    wp-files:
     
