--- a/dockerfiles/wordpress/docker-compose.yml
+++ b/dockerfiles/wordpress/docker-compose.yml
@@ -1,34 +1,48 @@
 version: '2.0'
 #
 # look at: https://docs.docker.com/compose/wordpress/
+#          https://www.digitalocean.com/community/tutorials/how-to-install-wordpress-and-phpmyadmin-with-docker-compose-on-ubuntu-14-04
 #
 services:
-   db:
-     container_name: wp-database-test
-     image: mysql:5.7
-     volumes:
-       - wp-database:/var/lib/mysql
-     restart: always
-     environment:
-       MYSQL_ROOT_PASSWORD: somewordpress
-       MYSQL_DATABASE: wordpress
-       MYSQL_USER: wordpress
-       MYSQL_PASSWORD: wordpress
+  db:
+   container_name: wp-database-test
+   image: mysql:5.7
+   volumes:
+     - wp-database:/var/lib/mysql
+   restart: always
+   environment:
+     MYSQL_ROOT_PASSWORD: somewordpress
+     MYSQL_DATABASE: wordpress
+     MYSQL_USER: wordpress
+     MYSQL_PASSWORD: wordpress
 
-   wordpress:
-     container_name: wordpress-test
-     depends_on:
-       - db
-     image: wordpress:4.9.1-php7.0-apache
-     volumes:
-           - wp-files:/var/www/html
-     ports:
-       - "8000:80"
-     restart: always
-     environment:
-       WORDPRESS_DB_HOST: db:3306
-       WORDPRESS_DB_USER: wordpress
-       WORDPRESS_DB_PASSWORD: wordpress
+  phpmyadmin:
+    container_name: wp-phpmyadmin
+    image: phpmyadmin/phpmyadmin:4.7
+    links:
+      - db:mysql
+    ports:
+      - 8181:80
+    environment:
+      MYSQL_USERNAME: root
+      MYSQL_ROOT_PASSWORD: somewordpress
+
+  wordpress:
+   container_name: wordpress-test
+   depends_on:
+     - db
+     - phpmyadmin
+   image: wordpress:4.9.1-php7.0-apache
+   volumes:
+         - wp-files:/var/www/html
+   ports:
+     - "8000:80"
+   restart: always
+   environment:
+     WORDPRESS_DB_HOST: db:3306
+     WORDPRESS_DB_USER: wordpress
+     WORDPRESS_DB_PASSWORD: wordpress
+
 volumes:
     wp-database:
     wp-files:
