--- a/dockerfiles/wordpress/docker-compose.yml
+++ b/dockerfiles/wordpress/docker-compose.yml
@@ -17,7 +17,7 @@ services:
    wordpress:
      depends_on:
        - db
-     image: wordpress:latest
+     image: wordpress:4.9.1
      ports:
        - "8000:80"
      restart: always
