--- a/dockerfiles/wordpress/docker-compose.yml
+++ b/dockerfiles/wordpress/docker-compose.yml
@@ -8,7 +8,7 @@ services:
    container_name: wp-database-test
    image: mysql:5.7
    volumes:
-     - wp-database:/var/lib/mysql
+     - /home/juergen/dev/docker/volumes/wp-database:/var/lib/mysql
    restart: always
    environment:
      MYSQL_ROOT_PASSWORD: somewordpress
@@ -34,7 +34,7 @@ services:
      - phpmyadmin
    image: wordpress:4.9.1-php7.0-apache
    volumes:
-         - wp-files:/var/www/html
+         - /home/juergen/dev/docker/volumes/wp-files:/var/www/html
    ports:
      - "8000:80"
    restart: always
@@ -43,7 +43,7 @@ services:
      WORDPRESS_DB_USER: wordpress
      WORDPRESS_DB_PASSWORD: wordpress
 
-volumes:
-    wp-database:
-    wp-files:
+#volumes:
+#    wp-database:
+#    wp-files:
     
